# phone_reminder

./: .gitignore  README.md  affirmations.py  app.py  ideaBoard.md  pyproject.toml  requirements.txt  schedule_tasks.py  sms_handler.py  timezones.py  twilio_logic.py  whats_been_texted.txt
static/: affirmations.txt  wakeup.xml
